[metadata]
name = SHS4py
version = 0.0.1
url = https://github.com/YukiMitsuta/shs4py
author = Yuki Mitsuta
aulthor_email = mitsutay@ccs.tsukuba.ac.jp
license_file = LICENSE
description = wtl: Personal Python package
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  numpy
  scipy
  fasteners
  cython
   
